2010-01-24  Eric Belanger  <eric@archlinux.org>

	* moc 2.5.0_alpha4-1
	* Upstream update to unstable series
	* Fixed aac support (close FS#13164)

2009-11-07  Eric Belanger  <eric@archlinux.org>

	* Fixed optdepends array syntax (close FS#16053)

2009-03-21  Eric Belanger  <eric@archlinux.org>

	* moc 2.4.4-3
	* Added missing libid3tag depends (close FS#13819)

2009-03-07  Eric Belanger  <eric@archlinux.org>

	* moc 2.4.4-2
	* Added patch to fix playback of WMA files

2009-01-11  Eric Belanger  <eric@archlinux.org>

	* moc 2.4.4-1
	* Upstream update
	* Added libtool depends
	* Replaced install scriptlet by optdepends
	* Added ChangeLog