@@ -1,3 +1,8 @@
+2010-02-25  Eric Belanger  <eric@archlinux.org>
+
+	* moc 2.5.0_alpha4-2
+	* Added wavpack and modplug support (close FS#18449)
+
 2010-01-24  Eric Belanger  <eric@archlinux.org>
 
 	* moc 2.5.0_alpha4-1
